--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDqLhsObljzDNgnlDC2Fn4EYts4GPRR09o</string>
     <string name="open">open</string>
     <string name="close">close</string>
+
+    <string name="nombre">Nombre:</string>
+    <string name="seccion">Sección:</string>
+    <string name="lema">Lema:</string>
 </resources>
